--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     container_name: koa-knex-realworld-example-api
     command: npm run start
     restart: unless-stopped
+    environment:
+      - NODE_ENV=development
+      - DB_CLIENT=sqlite3
     ports:
       - "3000:3000"
     volumes:
